search web maps referencing url

--- a/agoltools/config/config.json
+++ b/agoltools/config/config.json
@@ -1,6 +1,6 @@
 {
 	"PortalDomain": "www.arcgis.com",
 	"PortalOrgDomain": "maps.arcgis.com",
-	"AppId": "mIBcrH3XZUARAMOh",
+	"AppId": "YOUR_APP_ID_HERE",
 	"AppBaseUrl": "https://agoltools.appspot.com"
 }
